--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -6,8 +6,8 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <form action="" method="post" novalidate>
-                <!-- {% csrf_token %}
-                {{ form|crispy }} -->
+                {% csrf_token %}
+                <!-- {{ form|crispy }} --> 
                 <button class="btn btn-sm btn-info">Login Here</button>
             </form>
         </div>
